--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,58 +1,94 @@
-name: Test and Build
+name: CI-CD Pipeline
 
 on:
   push:
     branches:
       - main
 
-
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-    #Setting up environment
-    - name: Checkout code
-      uses: actions/checkout@v2
+      # Checkout code
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Docker Setup
-      uses: docker/setup-buildx-action@v2
+      # tfsec scan (optional: only if using Terraform)
+      - name: Run tfsec (Terraform security scan)
+        uses: aquasecurity/tfsec-action@v1.0.3
+        with:
+          working-directory: ./terraform
 
-    - name: Docker Credentials
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+      # Set up Docker
+      - name: Docker Setup
+        uses: docker/setup-buildx-action@v2
 
-    - name: Docker tag
-      id: version
-      run: |
-        VERSION=v$(date +"%Y%m%d%H%M%S")
-        echo "VERSION=$VERSION" >> $GITHUB_ENV
+      # Login to DockerHub
+      - name: Docker Credentials
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-    # Build the Docker Image
-    - name: Build Docker Image
-      run: |
-        docker build -t rajbir019/ci-cd:${{ env.VERSION }} .
+      # Generate Docker Tag
+      - name: Docker Tag
+        id: version
+        run: |
+          VERSION=v$(date +"%Y%m%d%H%M%S")
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
 
-    # Push the Docker Image
-    - name: Push Docker Image
-      run: |
-        docker push rajbir019/ci-cd:${{ env.VERSION }}
+      # Build Docker Image
+      - name: Build Docker Image
+        run: |
+          docker build -t rajbir019/ci-cd:${{ env.VERSION }} .
 
-    # UPdate the K8s Manifest Files
-    - name: Update K8s Manifests
-      run: |
-        cat deploy/deployment.yaml
-        sed -i "s|image: rajbir019/ci-cd:.*|image: rajbir019/ci-cd:${{ env.VERSION }}|g" deploy/deployment.yaml
-        cat deploy/deployment.yaml
-        
-    # Update Github
-    - name: Commit the changes
-      run: |
-        git config --global user.email "<>"
-        git config --global user.name "GitHub Actions Bot"
-        git checkout main
-        git add deploy/deployment.yaml
-        git commit -m "Update deploy.yaml with new image version - ${{ env.VERSION }}"
-        git push origin main
+      # Trivy Scan
+      - name: Trivy Vulnerability Scan
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: rajbir019/ci-cd:${{ env.VERSION }}
+          format: table
+          ignore-unfixed: true
+          vuln-type: os,library
+          exit-code: '0'
+
+      # Push Docker Image
+      - name: Push Docker Image
+        run: |
+          docker push rajbir019/ci-cd:${{ env.VERSION }}
+
+      # Update deployment.yaml with new image tag
+      - name: Update K8s Deployment Manifest
+        run: |
+          sed -i "s|image: rajbir019/ci-cd:.*|image: rajbir019/ci-cd:${{ env.VERSION }}|g" deploy/deployment.yaml
+          cat deploy/deployment.yaml
+
+      # Commit updated YAML
+      - name: Commit and Push YAML
+        run: |
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+          git add deploy/deployment.yaml
+          git commit -m "Update deploy.yaml with image tag ${{ env.VERSION }}"
+          git push origin main || echo "No changes to commit"
+
+      # Configure AWS
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-north-1
+
+      # Set kubeconfig
+      - name: Update kubeconfig
+        run: |
+          aws eks --region eu-north-1 update-kubeconfig --name testing-cluster
+
+      # Deploy to EKS (including sealed secret)
+      - name: Apply Kubernetes Manifests
+        run: |
+          kubectl apply -f deploy/deployment.yaml
+          kubectl apply -f deploy/svc.yaml
+          kubectl apply -f deploy/mysealedsecret.yaml
