--- a/src/buildspec.yml
+++ b/src/buildspec.yml
@@ -2,9 +2,12 @@ version: 0.2
 
 phases:
   install:
-    runtime-versions:
-      nodejs: 18
     commands:
+      - echo Installing Node.js v20.19.0 using n...
+      - npm install -g n
+      - n 20.19.0
+      - node -v  # confirm Node version
+      - npm -v   # confirm NPM version
       - echo Installing dependencies...
       - npm install
 
