--- a/src/buildspec.yml
+++ b/src/buildspec.yml
@@ -2,21 +2,18 @@ version: 0.2
 
 phases:
   install:
+    runtime-versions:
+      nodejs: 20
     commands:
-      - echo "Installing Node.js v20.19.0 using n..."
-      - npm install -g n
-      - n 20.19.0
-      - node -v  # confirm Node version
-      - npm -v   # confirm NPM version
-      - echo "Installing dependencies..."
+      - echo Installing dependencies...
       - npm install
 
   build:
     commands:
-      - echo "Building the React app..."
+      - echo Building the React app...
       - npm run build
 
 artifacts:
   files:
     - '**/*'
-  base-directory: dist
+  base-directory: build
